docs/guides/lora-serving/0_existing_lora_support/00_static_lora/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lora-serving-route
spec:
  parentRefs:
  - name: openshift-ai-inference
    namespace: openshift-ingress
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v1
    backendRefs:
    - group: inference.networking.k8s.io
      kind: InferencePool
      name: qwen2-lora-inference-pool
      port: 8000
